--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "2"
 services:
     web:
-#        build: ./SampleCoreApp3
-        image: "acraksdemo.azurecr.io/samplecoreapp3-web:mssql-v1" 
+        build: ./SampleCoreApp3 
         container_name: samplecoreapp3-web
         ports:
-            - "80:80"
+            - "8080:80"
         depends_on:
             - db
     db:
